ファーストビュークラス変更

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <!-- /.container -->
       </header>
-      <div id="firstview">
+      <div class="content__firse-view">
         <div class="container">
           <h2>ページタイトル</h2>
           <p>ページサブタイトル</p>
