ファーストビュータイトル、ファーストビューサブタイトルのクラス変更

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </div>
         <!-- /.container -->
       </header>
-      <div class="content__firse-view">
-        <div class="container">
-          <h2>ページタイトル</h2>
-          <p>ページサブタイトル</p>
+      <div class="content__firstview">
+        <div class="content__firstview-inner">
+          <h2 class="content__firstview-title">ページタイトル</h2>
+          <p class="content__firstview-subtitle">ページサブタイトル</p>
         </div>
         <!-- /.container -->
         <picture>
