タイトル変更

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header>
       <div class="content__firstview">
         <div class="content__firstview-inner">
-          <h2 class="content__firstview-title">サイトタイトルの変更</h2>
+          <h2 class="content__firstview-title">ああああサイトタイトルの変更</h2>
           <p class="content__firstview-subtitle">ページサブタイトル</p>
         </div>
         <!-- /.container -->
